xtrac/src/main/java/parser/xtraParser.java
// Generated from /home/giacomo/IdeaProjects/XTRAC/src/main/java/xtra.g4 by ANTLR 4.7
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class xtraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMA=2, PLUS=3, MINUS=4, MUL=5, DIV=6, EQ=7, LEQ=8, GEQ=9, NEQ=10, 
		GRET=11, LESS=12, LPARENT=13, RPARENT=14, LBRACE=15, RBRACE=16, SEMICOLON=17, 
		ASSIGNMENT=18, MAX=19, MIN=20, INITIAL_MODIFIER=21, EVENT=22, EVENT_FIELD=23, 
		REGISTER_DECLARER=24, STATE_DECLARER=25, CONDITIONS_DECLARER=26, EVENT_DECLARER=27, 
		CUSTOM_EVENT_DECLARER=28, MACRO_ACTION_DECLARER=29, ETH=30, IPV4=31, TCP=32, 
		UDP=33, ETH_FIELD=34, IPV4_FIELD=35, TCP_FIELD=36, UDP_FIELD=37, ID=38, 
		NUMBER=39, WS=40, COMMENT=41, LINE_COMMENT=42;
	public static final int
		RULE_program = 0, RULE_body_element = 1, RULE_declaration = 2, RULE_function = 3, 
		RULE_event_statement = 4, RULE_event_body = 5, RULE_state_declaration = 6, 
		RULE_state_body = 7, RULE_condition = 8, RULE_conditions_statement = 9, 
		RULE_conditions_body = 10, RULE_custom_event_definition = 11, RULE_macro_action_definition = 12, 
		RULE_macro_action_body = 13, RULE_expr = 14, RULE_assignment = 15, RULE_term = 16, 
		RULE_header_type = 17, RULE_header_field_name = 18, RULE_header_field = 19, 
		RULE_identifier = 20, RULE_integer = 21, RULE_event_field = 22;
	public static final String[] ruleNames = {
		"program", "body_element", "declaration", "function", "event_statement", 
		"event_body", "state_declaration", "state_body", "condition", "conditions_statement", 
		"conditions_body", "custom_event_definition", "macro_action_definition", 
		"macro_action_body", "expr", "assignment", "term", "header_type", "header_field_name", 
		"header_field", "identifier", "integer", "event_field"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "','", "'+'", "'-'", "'*'", "'/'", "'=='", "'<='", "'>='", 
		"'!='", "'>'", "'<'", "'('", "')'", "'{'", "'}'", "';'", "'='", "'max'", 
		"'min'", "'initial'", null, null, "'Register'", "'State'", "'if'", "'on'", 
		"'Event'", "'Action'", "'eth'", "'ipv4'", "'tcp'", "'udp'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "COMMA", "PLUS", "MINUS", "MUL", "DIV", "EQ", "LEQ", "GEQ", 
		"NEQ", "GRET", "LESS", "LPARENT", "RPARENT", "LBRACE", "RBRACE", "SEMICOLON", 
		"ASSIGNMENT", "MAX", "MIN", "INITIAL_MODIFIER", "EVENT", "EVENT_FIELD", 
		"REGISTER_DECLARER", "STATE_DECLARER", "CONDITIONS_DECLARER", "EVENT_DECLARER", 
		"CUSTOM_EVENT_DECLARER", "MACRO_ACTION_DECLARER", "ETH", "IPV4", "TCP", 
		"UDP", "ETH_FIELD", "IPV4_FIELD", "TCP_FIELD", "UDP_FIELD", "ID", "NUMBER", 
		"WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "xtra.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public xtraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<Custom_event_definitionContext> custom_event_definition() {
			return getRuleContexts(Custom_event_definitionContext.class);
		}
		public Custom_event_definitionContext custom_event_definition(int i) {
			return getRuleContext(Custom_event_definitionContext.class,i);
		}
		public List<Macro_action_definitionContext> macro_action_definition() {
			return getRuleContexts(Macro_action_definitionContext.class);
		}
		public Macro_action_definitionContext macro_action_definition(int i) {
			return getRuleContext(Macro_action_definitionContext.class,i);
		}
		public List<Body_elementContext> body_element() {
			return getRuleContexts(Body_elementContext.class);
		}
		public Body_elementContext body_element(int i) {
			return getRuleContext(Body_elementContext.class,i);
		}
		public List<State_declarationContext> state_declaration() {
			return getRuleContexts(State_declarationContext.class);
		}
		public State_declarationContext state_declaration(int i) {
			return getRuleContext(State_declarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==REGISTER_DECLARER) {
				{
				{
				setState(46);
				declaration();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CUSTOM_EVENT_DECLARER || _la==MACRO_ACTION_DECLARER) {
				{
				setState(54);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CUSTOM_EVENT_DECLARER:
					{
					setState(52);
					custom_event_definition();
					}
					break;
				case MACRO_ACTION_DECLARER:
					{
					setState(53);
					macro_action_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(59);
				body_element();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STATE_DECLARER) {
				{
				{
				setState(65);
				state_declaration();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_elementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public Body_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterBody_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitBody_element(this);
		}
	}

	public final Body_elementContext body_element() throws RecognitionException {
		Body_elementContext _localctx = new Body_elementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body_element);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(71);
				assignment();
				}
				break;
			case 2:
				{
				setState(72);
				function();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode REGISTER_DECLARER() { return getToken(xtraParser.REGISTER_DECLARER, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(xtraParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(xtraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(xtraParser.COMMA, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(REGISTER_DECLARER);
			setState(76);
			identifier();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(77);
				match(COMMA);
				setState(78);
				identifier();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(xtraParser.ID, 0); }
		public TerminalNode LPARENT() { return getToken(xtraParser.LPARENT, 0); }
		public TerminalNode RPARENT() { return getToken(xtraParser.RPARENT, 0); }
		public TerminalNode SEMICOLON() { return getToken(xtraParser.SEMICOLON, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(xtraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(xtraParser.COMMA, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ID);
			setState(87);
			match(LPARENT);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EVENT) | (1L << ETH) | (1L << IPV4) | (1L << TCP) | (1L << UDP) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(88);
				term();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(94);
				match(COMMA);
				setState(95);
				term();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(RPARENT);
			setState(102);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Event_statementContext extends ParserRuleContext {
		public TerminalNode EVENT_DECLARER() { return getToken(xtraParser.EVENT_DECLARER, 0); }
		public TerminalNode LPARENT() { return getToken(xtraParser.LPARENT, 0); }
		public TerminalNode EVENT() { return getToken(xtraParser.EVENT, 0); }
		public TerminalNode RPARENT() { return getToken(xtraParser.RPARENT, 0); }
		public Event_bodyContext event_body() {
			return getRuleContext(Event_bodyContext.class,0);
		}
		public Event_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterEvent_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitEvent_statement(this);
		}
	}

	public final Event_statementContext event_statement() throws RecognitionException {
		Event_statementContext _localctx = new Event_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_event_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(EVENT_DECLARER);
			setState(105);
			match(LPARENT);
			setState(106);
			match(EVENT);
			setState(107);
			match(RPARENT);
			setState(108);
			event_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Event_bodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(xtraParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(xtraParser.RBRACE, 0); }
		public List<Conditions_statementContext> conditions_statement() {
			return getRuleContexts(Conditions_statementContext.class);
		}
		public Conditions_statementContext conditions_statement(int i) {
			return getRuleContext(Conditions_statementContext.class,i);
		}
		public List<Body_elementContext> body_element() {
			return getRuleContexts(Body_elementContext.class);
		}
		public Body_elementContext body_element(int i) {
			return getRuleContext(Body_elementContext.class,i);
		}
		public Event_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterEvent_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitEvent_body(this);
		}
	}

	public final Event_bodyContext event_body() throws RecognitionException {
		Event_bodyContext _localctx = new Event_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_event_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(LBRACE);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONDITIONS_DECLARER || _la==ID) {
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONDITIONS_DECLARER:
					{
					setState(111);
					conditions_statement();
					}
					break;
				case ID:
					{
					setState(112);
					body_element();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_declarationContext extends ParserRuleContext {
		public TerminalNode STATE_DECLARER() { return getToken(xtraParser.STATE_DECLARER, 0); }
		public TerminalNode ID() { return getToken(xtraParser.ID, 0); }
		public State_bodyContext state_body() {
			return getRuleContext(State_bodyContext.class,0);
		}
		public TerminalNode INITIAL_MODIFIER() { return getToken(xtraParser.INITIAL_MODIFIER, 0); }
		public State_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterState_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitState_declaration(this);
		}
	}

	public final State_declarationContext state_declaration() throws RecognitionException {
		State_declarationContext _localctx = new State_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_state_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(STATE_DECLARER);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIAL_MODIFIER) {
				{
				setState(121);
				match(INITIAL_MODIFIER);
				}
			}

			setState(124);
			match(ID);
			setState(125);
			state_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_bodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(xtraParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(xtraParser.RBRACE, 0); }
		public List<Body_elementContext> body_element() {
			return getRuleContexts(Body_elementContext.class);
		}
		public Body_elementContext body_element(int i) {
			return getRuleContext(Body_elementContext.class,i);
		}
		public List<Event_statementContext> event_statement() {
			return getRuleContexts(Event_statementContext.class);
		}
		public Event_statementContext event_statement(int i) {
			return getRuleContext(Event_statementContext.class,i);
		}
		public State_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterState_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitState_body(this);
		}
	}

	public final State_bodyContext state_body() throws RecognitionException {
		State_bodyContext _localctx = new State_bodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_state_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(LBRACE);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EVENT_DECLARER || _la==ID) {
				{
				setState(130);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(128);
					body_element();
					}
					break;
				case EVENT_DECLARER:
					{
					setState(129);
					event_statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TerminalNode EQ() { return getToken(xtraParser.EQ, 0); }
		public TerminalNode LEQ() { return getToken(xtraParser.LEQ, 0); }
		public TerminalNode GEQ() { return getToken(xtraParser.GEQ, 0); }
		public TerminalNode NEQ() { return getToken(xtraParser.NEQ, 0); }
		public TerminalNode GRET() { return getToken(xtraParser.GRET, 0); }
		public TerminalNode LESS() { return getToken(xtraParser.LESS, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condition);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				term();
				setState(138);
				match(EQ);
				setState(139);
				term();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				term();
				setState(142);
				match(LEQ);
				setState(143);
				term();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				term();
				setState(146);
				match(GEQ);
				setState(147);
				term();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				term();
				setState(150);
				match(NEQ);
				setState(151);
				term();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				term();
				setState(154);
				match(GRET);
				setState(155);
				term();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(157);
				term();
				setState(158);
				match(LESS);
				setState(159);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conditions_statementContext extends ParserRuleContext {
		public TerminalNode CONDITIONS_DECLARER() { return getToken(xtraParser.CONDITIONS_DECLARER, 0); }
		public TerminalNode LPARENT() { return getToken(xtraParser.LPARENT, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode RPARENT() { return getToken(xtraParser.RPARENT, 0); }
		public Conditions_bodyContext conditions_body() {
			return getRuleContext(Conditions_bodyContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(xtraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(xtraParser.COMMA, i);
		}
		public Conditions_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterConditions_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitConditions_statement(this);
		}
	}

	public final Conditions_statementContext conditions_statement() throws RecognitionException {
		Conditions_statementContext _localctx = new Conditions_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditions_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(CONDITIONS_DECLARER);
			setState(164);
			match(LPARENT);
			setState(165);
			condition();
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(166);
				match(COMMA);
				setState(167);
				condition();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(RPARENT);
			setState(174);
			conditions_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conditions_bodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(xtraParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(xtraParser.RBRACE, 0); }
		public List<Body_elementContext> body_element() {
			return getRuleContexts(Body_elementContext.class);
		}
		public Body_elementContext body_element(int i) {
			return getRuleContext(Body_elementContext.class,i);
		}
		public Conditions_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterConditions_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitConditions_body(this);
		}
	}
